syntax = "proto3";
option java_multiple_files = true;
option cc_generic_services = true;
option java_generic_services = true;
package com.helpdesk;

import "google/protobuf/struct.proto";
import "google/protobuf/wrappers.proto";

message SingleBooleanModel {
  google.protobuf.BoolValue data = 1;
}

message SingleIntegerModel {
  int32 data = 1;
}

message SingleLongModel {
  int64 data = 1;
}

message SingleMessageModel {
  string result = 1;
}

message NullableString {
  oneof kind {
    google.protobuf.NullValue null = 1;
    string data = 2;
  }
}

message NullableInt64 {
  oneof kind {
    google.protobuf.NullValue null = 1;
    int64 data = 2;
  }
}

message NullableBoolean {
  oneof kind {
    google.protobuf.NullValue null = 1;
    bool data = 2;
  }
}